--- a/iknow-common/package.json
+++ b/iknow-common/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "iknow-api",
+  "name": "iknow-common",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
-    "fastest-validator": "^1.11.1",
-    "lodash": "^4.17.21",
-    "mongoose": "^6.0.4",
-    "iknow-common": "link:../iknow-common"
-  },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
