--- a/iknow-api/package.json
+++ b/iknow-api/package.json
@@ -16,9 +16,10 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "fastest-validator": "^1.11.1",
+    "iknow-common": "link:../iknow-common",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.4",
-    "iknow-common": "link:../iknow-common"
+    "mongoose": "^6.0.4"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
