--- a/iknow-app/.eslintrc.json
+++ b/iknow-app/.eslintrc.json
@@ -90,6 +90,8 @@
             }
         ],
         "react/prop-types": 0,
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "nonblock-statement-body-position": 0,
+        "curly": 0
     }
 }
