--- a/iknow-app/package.json
+++ b/iknow-app/package.json
@@ -26,6 +26,9 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-spinners": "^0.11.0",
+    "react-toast-notifications": "^2.5.1",
+    "react-tooltip": "^4.2.21",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -39,7 +42,8 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-streams": "^5.1.4",
+    "iknow-common": "file:../iknow-common"
   },
   "scripts": {
     "start": "react-scripts start",
