--- a/iknow-app/.eslintrc.json
+++ b/iknow-app/.eslintrc.json
@@ -92,6 +92,7 @@
         "react/prop-types": 0,
         "no-underscore-dangle": 0,
         "nonblock-statement-body-position": 0,
-        "curly": 0
+        "curly": 0,
+        "no-nested-ternary": 0
     }
 }
