--- a/iknow-app/package.json
+++ b/iknow-app/package.json
@@ -43,7 +43,7 @@
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
     "workbox-streams": "^5.1.4",
-    "iknow-common": "file:../iknow-common"
+    "iknow-common": "link:../iknow-common"
   },
   "scripts": {
     "start": "react-scripts start",
