--- a/iknow-common/tsconfig.json
+++ b/iknow-common/tsconfig.json
@@ -5,6 +5,6 @@
     "compilerOptions": {
         "allowJs": true,
         "declaration": true,
-        "emitDeclarationOnly": true
+        "emitDeclarationOnly": true,
     }
 }
