--- a/iknow-common/tsconfig.json
+++ b/iknow-common/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "include": [
-        "./**/*"
+        "**/*"
     ],
     "compilerOptions": {
         "allowJs": true,
         "declaration": true,
-        "emitDeclarationOnly": true,
+        "emitDeclarationOnly": true
     }
 }
