--- a/iknow-app/package.json
+++ b/iknow-app/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.17",
     "iknow-common": "link:../iknow-common",
     "ionicons": "^5.4.0",
     "lodash": "^4.17.21",
@@ -29,6 +30,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "react-toast-notifications": "^2.5.1",
     "react-tooltip": "^4.2.21",
