--- a/iknow-api/package.json
+++ b/iknow-api/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "fastest-validator": "^1.11.1",
-    "iknow-common": "link:../iknow-common",
+    "iknow-backend-common": "^1.1.0",
+    "iknow-common": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.4",
