--- a/iknow-common/package.json
+++ b/iknow-common/package.json
@@ -1,9 +1,9 @@
 {
   "name": "iknow-common",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
