--- a/iknow-common/tsconfig.json
+++ b/iknow-common/tsconfig.json
@@ -5,6 +5,7 @@
     "compilerOptions": {
         "allowJs": true,
         "declaration": true,
-        "emitDeclarationOnly": true
+        "emitDeclarationOnly": true,
+        "outDir": "lib"
     }
 }
