--- a/iknow-backend-common/package.json
+++ b/iknow-backend-common/package.json
@@ -1,13 +1,15 @@
 {
   "name": "iknow-backend-common",
-  "version": "1.1.0",
+  "version": "1.3.5",
   "description": "",
   "main": "index.js",
+  "types": "./lib/index.d.ts",
   "keywords": [],
   "author": "Edmilson Nelson da Silva Junior",
   "license": "ISC",
   "dependencies": {
-    "iknow-common": "^1.0.0",
+    "amqplib": "^0.8.0",
+    "iknow-common": "^1.2.2",
     "mongoose": "^6.0.8"
   },
   "devDependencies": {
