--- a/iknow-api/.eslintrc.json
+++ b/iknow-api/.eslintrc.json
@@ -33,6 +33,8 @@
             "error",
             180
         ],
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "no-param-reassign": 0,
+        "consistent-return": 0
     }
 }
