--- a/iknow-api/package.json
+++ b/iknow-api/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
