--- a/iknow-app/package.json
+++ b/iknow-app/package.json
@@ -23,6 +23,7 @@
     "@types/react-select": "^4.0.17",
     "iknow-common": "^1.2.4",
     "ionicons": "^5.4.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
@@ -34,6 +35,7 @@
     "react-spinners": "^0.11.0",
     "react-toast-notifications": "^2.5.1",
     "react-tooltip": "^4.2.21",
+    "socket.io-client": "^4.2.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
