--- a/iknow-app/.eslintrc.json
+++ b/iknow-app/.eslintrc.json
@@ -95,6 +95,7 @@
         "curly": 0,
         "no-nested-ternary": 0,
         "jsx-a11y/control-has-associated-label": 0,
-        "react/no-array-index-key": 0
+        "react/no-array-index-key": 0,
+        "consistent-return": 0
     }
 }
