--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
         - 5673:5672
         - 15673:15672
     volumes:
-        - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq
-        - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+        - ~/.docker-conf/rabbitmq/data/:/usr/lib/rabbitmq
+        - ~/.docker-conf/rabbitmq/log/:/usr/log/rabbitmq
     networks:
         - iknow
     extra_hosts:
@@ -25,8 +25,8 @@ services:
       - ./iknow-messaging-consumers/:/usr/src/app/
       - /usr/src/app/node_modules
     environment:
-      MESSAGING_SERVICE_CONNECTION_URL: "amqp://host.docker.internal:5673"
-      MONGO_CONNECTION_URL: "mongodb+srv://master:NqSFg1V9cKwnITBT@dev.8gcal.mongodb.net/iKnow?retryWrites=true&w=majority"
+      MESSAGING_SERVICE_CONNECTION_URL: "${MESSAGING_SERVICE_CONNECTION_URL}"
+      MONGO_CONNECTION_URL: "${MONGO_CONNECTION_URL}"
     restart: unless-stopped
     depends_on:
       - iknow-rabbitmq
@@ -42,17 +42,17 @@ services:
       context: ./iknow-api
       dockerfile: Dockerfile
     ports:
-     - 3000:3000
+     - ${PORT}:${PORT}
     volumes:
       - ./iknow-api/:/usr/src/app/
       - /usr/src/app/node_modules
     restart: unless-stopped
     environment:
-      PORT: 3000
-      MONGO_CONNECTION_URL: "mongodb+srv://master:NqSFg1V9cKwnITBT@dev.8gcal.mongodb.net/iKnow?retryWrites=true&w=majority"
-      PASSWORD_HASH_SALT_ROUNDS: 10
-      AUTHENTICATION_SECRET: "8RcFZHrtUv9nXt0j7IWWg2A04Bo1CrqyoGnIIyO0j7xcHpod6INtzp5BtUmv5dgydyU02f_hkrgGMOqcrYfweL4_Bu_VpNAdA-2bPUdYUFFFQmTSAhhLwRjrGJVGTimOFLrbdvceijDyaQ2r6uKJF1yH3oR60xGAnxotaTqgK9s"
-      MESSAGING_SERVICE_CONNECTION_URL: "amqp://host.docker.internal:5673"
+      PORT: ${PORT}
+      MONGO_CONNECTION_URL: "${MONGO_CONNECTION_URL}"
+      PASSWORD_HASH_SALT_ROUNDS: ${PASSWORD_HASH_SALT_ROUNDS}
+      AUTHENTICATION_SECRET: "${AUTHENTICATION_SECRET}"
+      MESSAGING_SERVICE_CONNECTION_URL: "${MESSAGING_SERVICE_CONNECTION_URL}"
     depends_on:
       - iknow-rabbitmq
       - iknow-messaging-consumers
