--- a/iknow-app/.eslintrc.json
+++ b/iknow-app/.eslintrc.json
@@ -85,7 +85,7 @@
             "error",
             {
                 "variables": false,
-                "functions": false,
+                "functions": false, 
                 "classes": false
             }
         ],
@@ -96,6 +96,7 @@
         "no-nested-ternary": 0,
         "jsx-a11y/control-has-associated-label": 0,
         "react/no-array-index-key": 0,
-        "consistent-return": 0
+        "consistent-return": 0,
+        "react/default-props-match-prop-types": 0
     }
 }
